Fix scrollbar for media in safari

--- a/src/assets/scss/global/_common.scss
+++ b/src/assets/scss/global/_common.scss
@@ -13,3 +13,20 @@ img {
   height: auto;
   display: block;
 }
+
+//media query + scrollbar fix in safari
+@media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0)
+{
+  html
+  {
+    overflow:hidden;
+    height:100%;
+  }
+  body
+  {
+    position:relative;
+    overflow-y:scroll;
+    height:100%;
+    -webkit-overflow-scrolling:touch; /* So iOS Safari gets the inertia & rubber-band effect */
+  }
+}
